# gazebo_simulation

./: README.md
src/: Dockerfile
src/gazebo_simulation/: CMakeLists.txt  package.xml
src/gazebo_simulation/config/: config.yaml
src/gazebo_simulation/launch/: robot.launch  scene.launch
src/gazebo_simulation/models/camera/: model.config  model.sdf
src/gazebo_simulation/models/green_cube/: model.config  model.sdf
src/gazebo_simulation/models/ramp/: model.config  model.sdf
src/gazebo_simulation/models/robot/: model.config  model.sdf
src/gazebo_simulation/src/: data.csv  main_window_ui.py  plotResults.py  ui_interface.py
src/gazebo_simulation/ui/: untitled.ui
src/gazebo_simulation/urdf/: ramp.urdf  robot.urdf
src/gazebo_simulation/worlds/: scenario.world
