<?xml version="1.0"?>
<package format="2">
  <name>gazebo_simulation</name>
  <version>0.0.0</version>
  <description>The gazebo_simulation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="madport@todo.todo">madport</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_msgs</build_depend>


  <export>
    <!-- The ROS version with which this package is compatible -->
    <build_type>catkin</build_type>
  </export>
</package>